# CMakeExercises

./: .gitignore  README.md
Ex1/: main.cpp
Ex2/: CMakeLists.txt
Ex2/src/: main.cpp
Ex3/: CMakeLists.txt
Ex3/include/: calculator.h
Ex5/: CMakeLists.txt
Ex5/src/: calculator.cpp
